# ECN

./: CMakeLists.txt  Makefile  README.md  ecn.db  test.db  test_register.py
include/: ecn_audit.h  ecn_crypto.h  ecn_db.h  ecn_note.h  ecn_protocol.h  ecn_server.h  ecn_user.h
src/: main.c
src/client/: logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  noteeditwidget.cpp  noteeditwidget.h  notelistwidget.cpp  notelistwidget.h
src/crypto/: ecn_crypto.c  ecn_crypto_test.c
src/db/: ecn_db.c  ecn_db_test.c
src/gui/: ECN.pro  Makefile  crypto_utils.h  logindialog.cpp  logindialog.h  logindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_logindialog.cpp  moc_mainwindow.cpp  ui_logindialog.h  ui_mainwindow.h
src/include/: ecn.h
src/server/: ecn_server.c  ecn_server.h  main.c
src/test/: test_crypto.c  test_main.c  test_server.c
